--- a/_config.yml
+++ b/_config.yml
@@ -14,39 +14,37 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Barancan Sönmez # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Electrical & Electronics Engineer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Technical Blog, Robotics, AI, Electronics
 
 # Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://sbarancan.github.io"
-
 github:
-  username: github_username # change to your GitHub username
+  username: sbarancan # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+# twitter:
+#   username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Barancan Sönmez
+  email: barancan.sonmez.tr@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    #- https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/sbarancan # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/barancan-sonmez
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: dVk13PywTSX0S0gghqRo7umYDuPPAeHv1yX96umNDDY # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
@@ -98,11 +96,11 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media.licdn.com/dms/image/v2/D5603AQH-YPcGDSjBrA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718219979160?e=1738195200&v=beta&t=XZfzd4f44wrEhZmw6HQVU6LlP0tzq8AzVOSynPXUH1w
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://media.licdn.com/dms/image/v2/D5603AQH-YPcGDSjBrA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1718219979160?e=1738195200&v=beta&t=XZfzd4f44wrEhZmw6HQVU6LlP0tzq8AzVOSynPXUH1w # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
